fixed div overflow

--- a/matching_game/css/style.css
+++ b/matching_game/css/style.css
@@ -17,6 +17,7 @@ body {
 
 body article#game {
 	width: 600px;
+	height: 550px;
 	margin: 0 auto;
 }
 
